resolve spacing + slower transition

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  margin: 30px;
+  margin: 0px;
 }
 
 p {
   font-family: sans-serif;
-  margin-top: 0px;
+  font-weight: lighter;
 }
 
 #scrollToTop {
@@ -25,14 +25,14 @@ p {
   z-index: 1001;
 }
 
-
 .navbar {
   position: absolute;
   top: 0;
   width: 100%;
-  padding: 10px 0px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
+  padding-top: 20px;
+  padding-left: 10px;
   z-index: 1000;
 }
 
@@ -42,17 +42,14 @@ p {
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  padding: 10px;
+  grid-template-columns: 1fr 2fr 1fr;
+  padding: 20px;
 }
 
-.gallery {
-  padding: 0px 25vw 0px 0px;
-}
 .reveal {
   opacity: 0;
-  transform: translateY(20px);
-  transition: opacity 0.6s ease, transform 0.6s ease;
+  transform: translateY(10px);
+  transition: opacity 2s ease, transform 3s ease;
 }
 
 /* Class to add when the element is visible */
@@ -62,12 +59,7 @@ p {
 }
 
 .text {
-  font-size: 12px;
-}
-
-.desc {
-  font-size: 12px;
-  padding: 0px 25vw 0px 0px;
+  font-size: 14px;
 }
 
 .gallery_content {
@@ -116,9 +108,12 @@ a:focus {
   .gallery {
     padding: 0px 2px;
   }
-  
-  .desc {
-  padding: 0px 2px;
+
+  .container {
+    grid-template-columns: 1fr 2fr;
   }
 
+  .navbar {
+  grid-template-columns: 1fr 0fr 2fr;
+  }
 }
